force-app/main/default/objects/Lead/fields/Company_Phone__c.field-meta.xml
<CustomField>
    <fullName>Company_Phone__c</fullName>
    <description>스폰서/제휴 후보 기업의 대표 전화번호. Lead 전환 시 Account.Phone으로 매핑 예정.</description>
    <label>Company Phone</label>
    <type>Phone</type>
</CustomField>