force-app/main/default/objects/Lead/fields/Competitor_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Sponsor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>경쟁 구단을 현재 후원 중인지 여부. Lead Scoring Risk 감점(-20)에서 사용.</description>
    <label>Competitor Sponsor</label>
    <type>Checkbox</type>
</CustomField>