force-app/main/default/objects/Lead/fields/Controversial_Industry__c.field-meta.xml
<CustomField>
    <fullName>Controversial_Industry__c</fullName>
    <defaultValue>false</defaultValue>
    <description>브랜드 이미지 리스크가 있는 논란 업종 여부. Lead Scoring Risk 감점(-10)에서 사용.</description>
    <label>Controversial Industry</label>
    <type>Checkbox</type>
</CustomField>