force-app/main/default/objects/Lead/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <description>담당자(Lead)의 소속 부서. Lead 전환 시 Contact.Department로 매핑 예정.</description>
    <label>Department</label>
    <length>80</length>
    <type>Text</type>
</CustomField>