force-app/main/default/objects/Lead/fields/Final_Lead_Score__c.field-meta.xml
<CustomField>
    <fullName>Final_Lead_Score__c</fullName>
    <description>Risk 감점을 반영한 최종 Lead Score (0~100). MAX(0, Total Score - Risk Penalty).</description>
    <formula>MAX(0, SDO_Sales_Lead_Total__c - Risk_Penalty__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Lead Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>