force-app/main/default/objects/Lead/fields/Recommendation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Recommendation_Reason__c</fullName>
    <label>Recommendation Reason</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>