force-app/main/default/objects/Lead/fields/Regional_Connection__c.field-meta.xml
<CustomField>
    <fullName>Regional_Connection__c</fullName>
    <description>Cloud Alpacas 연고지역과의 관련도. Lead Scoring 지역 연고성 10점 항목에서 사용.</description>
    <label>Regional Connection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home_Base</fullName>
                <label>본거지</label>
            </value>
            <value>
                <fullName>Adjacent_Region</fullName>
                <label>인접권역</label>
            </value>
            <value>
                <fullName>No_Connection</fullName>
                <label>비연고</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>