force-app/main/default/objects/Lead/fields/Risk_Penalty__c.field-meta.xml
<CustomField>
    <fullName>Risk_Penalty__c</fullName>
    <description>Risk 감점 (경쟁 구단 후원 -20, 논란 업종 -10, 중복 시 합산).</description>
    <formula>IF(Competitor_Sponsor__c, 20, 0) + IF(Controversial_Industry__c, 10, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Risk Penalty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>