force-app/main/default/objects/Lead/fields/Score2__c.field-meta.xml
<CustomField>
    <fullName>Score2__c</fullName>
    <formula>CASE(SDO_Sales_Decision_Timeframe__c ,&quot;Immediately&quot;, 20, &quot;1-3 Months&quot;,16,&quot;3-6 Months&quot;, 12, &quot;6-12 Months&quot;, 8, &quot;Next Year&quot;, 4, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Decision Timeframe Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>