force-app/main/default/objects/Lead/fields/Score_Interest__c.field-meta.xml
<CustomField>
    <fullName>Score_Interest__c</fullName>
    <description>관심도 점수 (12점 만점). pi__score__c(Account Engagement Score) 구간 환산.</description>
    <formula>IF(ISBLANK(pi__score__c), 0,
IF(pi__score__c &gt;= 100, 12,
IF(pi__score__c &gt;= 50, 8,
IF(pi__score__c &gt;= 20, 4,
IF(pi__score__c &gt;= 1, 2, 0)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interest Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>