force-app/main/default/objects/Lead/fields/Score_LeadSource__c.field-meta.xml
<CustomField>
    <fullName>Score_LeadSource__c</fullName>
    <description>유입경로 점수 (8점 만점). LeadSource 값 기반 등급 매핑.</description>
    <formula>CASE(LeadSource,
&quot;Referral&quot;,8,
&quot;Partner&quot;,8,
&quot;Website&quot;,6,
&quot;Marketing Event&quot;,6,
&quot;Inbound Call&quot;,4,
&quot;Social Media&quot;,4,
&quot;Community&quot;,2,
&quot;Cold Call&quot;,2,
&quot;Data.com&quot;,2,
&quot;Salesforce IoT&quot;,2,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Source Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>