force-app/main/default/objects/Lead/fields/Score_Region__c.field-meta.xml
<CustomField>
    <fullName>Score_Region__c</fullName>
    <description>지역 연고성 점수 (10점 만점). Regional_Connection__c 값 기반.</description>
    <formula>CASE(Regional_Connection__c,
&quot;Home_Base&quot;,10,
&quot;Adjacent_Region&quot;,5,
&quot;No_Connection&quot;,0,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Region Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>