force-app/main/default/objects/Lead/fields/Score_Sponsorship__c.field-meta.xml
<CustomField>
    <fullName>Score_Sponsorship__c</fullName>
    <description>스폰서십 경험 점수 (10점 만점). Sponsorship_History__c 기반.</description>
    <formula>IF(Sponsorship_History__c, 10, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sponsorship Experience Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>