force-app/main/default/objects/Lead/fields/SDO_Sales_Lead_Quality__c.field-meta.xml
<CustomField>
    <fullName>SDO_Sales_Lead_Quality__c</fullName>
    <formula>CASE(FLOOR(MIN(SDO_Sales_Lead_Total__c,100)/25),
0, &quot;☆☆☆☆&quot;,
1, &quot;★☆☆☆&quot;,
2, &quot;★★☆☆&quot;,
3, &quot;★★★☆&quot;,
&quot;★★★★&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Quality</label>
    <type>Text</type>
</CustomField>