force-app/main/default/objects/Lead/fields/Segment_Match__c.field-meta.xml
<CustomField>
    <fullName>Segment_Match__c</fullName>
    <label>Segment Match</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>