force-app/main/default/objects/Lead/fields/Sponsorship_History__c.field-meta.xml
<CustomField>
    <fullName>Sponsorship_History__c</fullName>
    <defaultValue>false</defaultValue>
    <description>기존 스폰서십/제휴 경험 여부. Lead Scoring 적합도 항목에서 사용 예정.</description>
    <label>Sponsorship History</label>
    <type>Checkbox</type>
</CustomField>