force-app/main/default/objects/Lead/fields/Target_Segment__c.field-meta.xml
<CustomField>
    <fullName>Target_Segment__c</fullName>
    <label>Target Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10-30 Female</fullName>
            </value>
            <value>
                <fullName>10-30 Male</fullName>
            </value>
            <value>
                <fullName>40-60 Female</fullName>
            </value>
            <value>
                <fullName>40-60 Male</fullName>
            </value>
            <value>
                <fullName>Family</fullName>
            </value>
            <value>
                <fullName>etc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>