force-app/main/default/objects/Lead/recordTypes/SDO_Lead_Default.recordType-meta.xml
<RecordType>
    <fullName>SDO_Lead_Default</fullName>
    <active>true</active>
    <businessProcess>Sales Lead</businessProcess>
    <description>Standard lead qualification and conversion process.</description>
    <label>Lead</label>
</RecordType>