force-app/main/default/objects/Lead/listViews/PRM_Leads.listView-meta.xml
<ListView>
    <fullName>PRM_Leads</fullName>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.LAST_NAME</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Final_Lead_Score__c</columns>
    <columns>Risk_Penalty__c</columns>
    <columns>LEAD.INDUSTRY</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>Regional_Connection__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Converted</value>
    </filters>
    <label>PRM Leads - Priority</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
        <allPartnerUsers></allPartnerUsers>
    </sharedTo>
</ListView>