force-app/main/default/objects/Lead/listViews/PRM_Leads_All.listView-meta.xml
<ListView>
    <fullName>PRM_Leads_All</fullName>
    <columns>LEAD.COMPANY</columns>
    <columns>Final_Lead_Score__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Risk_Penalty__c</columns>
    <columns>LEAD.INDUSTRY</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>Regional_Connection__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>PRM Leads - All</label>
</ListView>